--- a/app/client/templates/components/multiplyContract.html
+++ b/app/client/templates/components/multiplyContract.html
@@ -79,7 +79,7 @@
                             </tr>
                         </tbody>
                       </table>
-                      <input type="submit" class="btn btn-default" value="デリバティブ商品を登録する">
+                      <input type="submit" class="btn btn-defaultt" value="デリバティブ商品を登録する">
                     </form>
                     </div>
                     <button type="button" class="btn btn-default">
