--- a/app/client/templates/layout/_header.html
+++ b/app/client/templates/layout/_header.html
@@ -18,6 +18,11 @@
                         {{{i18n 'dapp.app.buttons.view2'}}}
                     </a>
                 </li>
+				<li>
+                    <a href="{{ pathFor 'view3' }}">
+                        View3
+                    </a>
+                </li>
 			</ul>
 		</div>
 	</nav>
