call web3 from js

--- a/app/client/templates/components/index.html
+++ b/app/client/templates/components/index.html
@@ -4,6 +4,7 @@
     <div class="panel-heading">
       <h4>デリバティブ商品一覧</h4>
     </div>
+    <p>{{coinbase}}</p>
     <table class="table">
       <thead>
         <tr>
