--- a/app/client/templates/layout/_header.html
+++ b/app/client/templates/layout/_header.html
@@ -23,6 +23,11 @@
                         View3
                     </a>
                 </li>
+				<li>
+                    <a href="{{ pathFor 'view4' }}">
+                        View4
+                    </a>
+                </li>
 			</ul>
 		</div>
 	</nav>
