--- a/app/client/templates/components/multiplyContract.html
+++ b/app/client/templates/components/multiplyContract.html
@@ -36,65 +36,52 @@
                 {{/if}}
             
                 {{#if isInactive}}
-                    <ul>
-                      {{#each tasks}}
-                        {{> task}}
-                      {{/each}}
-                    </ul> 
-
                     <p class="well well-info"> 商品情報を入力してください </p>
-                    <div class="panel panel-default">
-                      <div class="panel-heading">
-                        <h4>商品情報</h4>
-                      </div>
+                    <form class="conditions">
+                      <div class="panel panel-default">
+                        <div class="panel-heading">
+                          <h4>商品情報</h4>
+                        </div>
 
-                      <form class="conditions">
-                      <table class="table">
-                        <tbody>
-                            <tr>
-                              <th scope="row">BTC価格</th>
-                              <td>
-                                <input type="text" name="price" placeholder="例：50,000円" />
-                              </td>
-                            </tr>
-                            <tr>
-                              <th scope="row">BTC数量</th>
-                              <td>
-                                  <input type="text" name="amount" placeholder="例：1 BTC" />
-                              </td>
-                            </tr>
-                            <tr>
-                              <th scope="row">実行日</th>
-                              <td>
-                                  <input type="text" name="exeday" placeholder="例：2016年4月25日" />
-                              </td>
-                            </tr>
-                            <tr>
-                              <th scope="row">プレミアム</th>
-                              <td>
-                                  <input type="text" name="premium" placeholder="例：5,000円" />
-                              </td>
-                            </tr>
-                            <tr>
-                              <th scope="row">ポジション</th>
-                              <td>
-                                  <input type="text" name="position" id="position" placeholder="例：buy" />
-                              </td>
-                            </tr>
-                        </tbody>
-                      </table>
-                      <input type="submit" class="btn btn-defaultt" value="デリバティブ商品を登録する">
+                        <table class="table main">
+                          <tbody>
+                              <tr>
+                                <th scope="row">BTC価格</th>
+                                <td>
+                                  <input type="text" name="price" placeholder="例：50,000円" />
+                                </td>
+                              </tr>
+                              <tr>
+                                <th scope="row">BTC数量</th>
+                                <td>
+                                    <input type="text" name="amount" placeholder="例：1 BTC" />
+                                </td>
+                              </tr>
+                              <tr>
+                                <th scope="row">実行日</th>
+                                <td>
+                                    <input type="text" name="exeday" placeholder="例：2016年4月25日" />
+                                </td>
+                              </tr>
+                              <tr>
+                                <th scope="row">プレミアム</th>
+                                <td>
+                                    <input type="text" name="premium" placeholder="例：5,000円" />
+                                </td>
+                              </tr>
+                              <tr>
+                                <th scope="row">ポジション</th>
+                                <td>
+                                    <input type="text" name="position" id="position" placeholder="例：buy" />
+                                </td>
+                              </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                      <input type="submit" class="btn btn-default center-block" value="デリバティブ商品を登録する">
                     </form>
-                    </div>
-                    <button type="button" class="btn btn-default">
-                      商品登録を完了する
-                    </button>
                 {{/if}}
             {{/with}}
         </div>
     </div>
-</template>
-
-<template name="task">
-  <li>{{text}}</li>
 </template>
