--- a/app/client/templates/components/info.html
+++ b/app/client/templates/components/info.html
@@ -2,44 +2,77 @@
 <!-- information パネル -->
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4>取引情報</h4>
+      <h4>取引履歴</h4>
     </div>
     <table class="table">
       <thead>
         <tr>
-          <th>取引日</th>
-          <th>商品名</th>
+          <th>商品ID</th>
+          <th>売手アドレス</th>
           <th>BTC価格</th>
           <th>BTC数量</th>
-          <th>プレミアム</th>
           <th>実行日</th>
+          <th>プレミアム</th>
           <th>ポジション</th>
-          <th>ステータス</th>
+          <th>購入日</th>
+          <th>実行済?</th>
         </tr>
       </thead>
       <tbody>
       <!-- 取引情報を配列で取得してきて繰り返しで並べる -->
           <tr>
-            <td>2016-2-3</td>
-            <td>デリバティブX</td>
-            <td>100 円</td>
-            <td>0.5 btc</td>
-            <td>10,000 円</td>
-            <td>2016-8-31</td>
-            <td>売り</td>
-            <td>未執行</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
           </tr>
           <tr>
-            <td>2016-4-2</td>
-            <td>デリバティブY</td>
-            <td>100 円</td>
-            <td>0.5 btc</td>
-            <td>10,000 円</td>
-            <td>2016-8-31</td>
-            <td>売り</td>
-            <td>未執行</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
+            <td>hogehoge</td>
           </tr>
+         {{> transaction}}
       </tbody>
     </table>
   </div>
+</template>
+
+<!-- 上記の{{transaction}}に格納 -->
+<template name="transaction">
+  <tr>
+    <td>hoge</td>
+    <td>hoge</td>
+    <td>hoge</td>
+    <td>hoge</td>
+    <td>hoge</td>
+    <td>hoge</td>
+    <td>hoge</td>
+    <td>hoge</td>
+    <td>hoge</td>
+  </tr>
+  <!-- info.js にtransactionsのヘルパーを記載することで下記の{{}}内に変数が格納される -->
+  {{#each transactions}}
+  <tr>
+    <td>{{_id}}</td>
+    <td>{{seller}}</td>
+    <td>{{price}}</td>
+    <td>{{amount}}</td>
+    <td>{{exeday}}</td>
+    <td>{{premium}}</td>
+    <td>{{position}}</td>
+    <td>{{buy_date}}</td>
+    <td>{{done}}</td>
+  </tr>
+  {{/each}}
 </template>
