--- a/app/client/templates/layout/_footer.html
+++ b/app/client/templates/layout/_footer.html
@@ -12,8 +12,19 @@
                     {{{i18n 'dapp.app.buttons.view2'}}}
                 </a>
             </li>
+            <li class="footer-menu-divider">⋅</li>
+            <li>
+                <a href="{{ pathFor 'view3' }}">
+                    {{{i18n 'dapp.app.buttons.view3'}}}
+                </a>
+            </li>
+            <li class="footer-menu-divider">⋅</li>
+            <li>
+                <a href="{{ pathFor 'view4' }}">
+                    {{{i18n 'dapp.app.buttons.view4'}}}
+                </a>
+            </li>
         </ul>
-       
         <p class="copyright text-muted small">
             {{{i18n 'dapp.app.copyright'}}}
         </p>
