--- a/app/client/templates/components/info.html
+++ b/app/client/templates/components/info.html
@@ -20,28 +20,6 @@
       </thead>
       <tbody>
       <!-- 取引情報を配列で取得してきて繰り返しで並べる -->
-          <tr>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-          </tr>
-          <tr>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-            <td>hogehoge</td>
-          </tr>
          {{> transaction}}
       </tbody>
     </table>
@@ -51,15 +29,15 @@
 <!-- 上記の{{transaction}}に格納 -->
 <template name="transaction">
   <tr>
-    <td>hoge</td>
-    <td>hoge</td>
-    <td>hoge</td>
-    <td>hoge</td>
-    <td>hoge</td>
-    <td>hoge</td>
-    <td>hoge</td>
-    <td>hoge</td>
-    <td>hoge</td>
+    <td>1</td>
+    <td>0xfffe72483eb0bc804295af2416d2aeb4fa15a8bc</td>
+    <td>100 円</td>
+    <td>0.5 btc</td>
+    <td>2016-8-31</td>
+    <td>10,000 円</td>
+    <td>売り</td>
+    <td>2016-5-1</td>
+    <td>No</td>
   </tr>
   <!-- info.js にtransactionsのヘルパーを記載することで下記の{{}}内に変数が格納される -->
   {{#each transactions}}
