date timestamp表示 done

--- a/app/client/templates/components/multiplyContract.html
+++ b/app/client/templates/components/multiplyContract.html
@@ -60,9 +60,9 @@
                             <tr>
                                 <th scope="row">実行日</th>
                                 <td>
-                                    <input type="text" name="exeYear" placeholder="例：2016" />
-                                    <input type="text" name="exeMonth" placeholder="例：5" />
-                                    <input type="text" name="exeDay" placeholder="例：10" />
+                                    <input type="text" name="exeYear" placeholder="年" />
+                                    <input type="text" name="exeMonth" placeholder="月" />
+                                    <input type="text" name="exeDay" placeholder="日" />
                                 </td>
                             </tr>
                             <tr>
