一時コミット

--- a/app/client/templates/components/index.html
+++ b/app/client/templates/components/index.html
@@ -36,7 +36,7 @@
         <td>{{exeday}}</td>
         <td>{{premium}}</td>
         <td>{{position}}</td>
-        <td><button type="button" class="btn btn-success" id="{{">購入</button></td>
+        <td><button type="button" class="btn btn-success" id="{{contract_address}}">購入</button></td>
     </tr>
     {{/each}}
 </template>
