--- a/app/client/templates/components/index.html
+++ b/app/client/templates/components/index.html
@@ -29,13 +29,13 @@
     <!-- index.js にcontractsのヘルパーを記載することで下記の{{}}内に変数が格納される -->
     {{#each contracts}}
     <tr>
-        <td>{{_id}}</td>
-        <td>{{seller}}</td>
-        <td>{{price}}</td>
-        <td>{{amount}}</td>
-        <td>{{exeday}}</td>
-        <td>{{premium}}</td>
-        <td>{{position}}</td>
+        <td id="_id">{{_id}}</td>
+        <td id="seller">{{seller}}</td>
+        <td id="price">{{price}}</td>
+        <td id="amount">{{amount}}</td>
+        <td id="exeday">{{exeday}}</td>
+        <td id="premium">{{premium}}</td>
+        <td id="position">{{position}}</td>
         <td><button type="button" class="btn btn-success" id="{{contract_address}}">購入</button></td>
     </tr>
     {{/each}}
