--- a/app/client/templates/views/view3.html
+++ b/app/client/templates/views/view3.html
@@ -1,5 +1,7 @@
 <template name="views_view3">
     <div class="row-fluid">
+      <div class="col-md-8">
         {{> components_index}}
+      </div>
     </div>
 </template>
