--- a/app/client/templates/components/multiplyContract.html
+++ b/app/client/templates/components/multiplyContract.html
@@ -1,7 +1,7 @@
 <template name="components_multiplyContract">
     <div class="panel panel-default panel-dapp">
         <div class="panel-heading">
-            <p>Option Trading</p>
+            <p>金利スワップ</p>
         </div>
         <div class="panel-body">
             {{#with TemplateVar.get 'state'}}
@@ -42,45 +42,58 @@
                     <div class="panel-heading">
                         <h4>商品情報</h4>
                     </div>
-
                     <table class="table main">
                         <tbody>
                             <tr>
-                                <th scope="row">BTC価格</th>
+                                <th scope="row">お客様</th>
                                 <td>
-                                    <input type="text" name="price" placeholder="例：50,000" />
+                                    <input type="text" name="client" placeholder="例：丸の内商事" />
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">BTC数量</th>
+                                <th scope="row">想定元本[円]</th>
                                 <td>
-                                    <input type="text" name="amount" placeholder="例：1" />
+                                    <input type="text" name="price" placeholder="例：500,000,000" />
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">実行日</th>
+                                <th scope="row">契約日</th>
                                 <td>
-                                    <input type="text" name="exeYear" placeholder="年" />
-                                    <input type="text" name="exeMonth" placeholder="月" />
-                                    <input type="text" name="exeDay" placeholder="日" />
+                                    <input type="text" name="issuedYear" placeholder="年" />
+                                    <input type="text" name="issuedMonth" placeholder="月" />
+                                    <input type="text" name="issuedDay" placeholder="日" />
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">プレミアム</th>
+                                <th scope="row">満期日</th>
                                 <td>
-                                    <input type="text" name="premium" placeholder="例：5,000" />
+                                    <input type="text" name="expiredYear" placeholder="年" />
+                                    <input type="text" name="expiredMonth" placeholder="月" />
+                                    <input type="text" name="expiredDay" placeholder="日" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">固定金利[%]</th>
+                                <td>
+                                    <input type="text" name="fixedRate" placeholder="例：1.0" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">変動金利</th>
+                                <td>
+                                    <input type="text" name="floatingRate" placeholder="例：TIBOR" />
                                 </td>
                             </tr>
                             <tr>
                                 <th scope="row">ポジション</th>
                                 <td>
-                                    <input type="text" name="position" id="position" placeholder="例：buy" />
+                                    <input type="text" name="position" id="position" placeholder="例：変動" />
                                 </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-                <input type="submit" class="btn btn-default center-block" value="デリバティブ商品を登録する">
+                <input type="submit" class="btn btn-default center-block" value="金利スワップを作成する">
             </form>
             {{/if}}
             {{/with}}
