--- a/app/client/templates/layout/_header.html
+++ b/app/client/templates/layout/_header.html
@@ -3,23 +3,23 @@
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="/">
-            {{{i18n 'dapp.app.title'}}}
+            Swap Trade
         </a>
 			</div>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
             <a href="{{ pathFor 'view1' }}">
-                {{{i18n 'dapp.app.buttons.view1'}}}
+                ブロックチェーンステータス
             </a>
         </li>
 				<li>
             <a href="{{ pathFor 'view2' }}">
-                {{{i18n 'dapp.app.buttons.view2'}}}
+                商品一覧
             </a>
         </li>
 				<li>
             <a href="{{ pathFor 'view3' }}">
-                {{{i18n 'dapp.app.buttons.view3'}}}
+                契約一覧
             </a>
         </li>
 		</ul>
