--- a/app/client/templates/views/view4.html
+++ b/app/client/templates/views/view4.html
@@ -1,9 +1,8 @@
-<template name="views_view4">
- <div class="row-fluid">
-	<div class="col-md-6">
- 		{{> components_info}}
-	</div>
-	<div class="col-md-6">
-	</div>
- </div>
+<template name="view4">
+    <div class="row-fluid">
+      <div class="col-md-8">
+        {{> components_info}}
+      </div>
+    </div>
 </template>
+
