--- a/app/client/templates/layout/_footer.html
+++ b/app/client/templates/layout/_footer.html
@@ -1,7 +1,7 @@
 <template name="layout_footer">
    <footer class="footernav">
         <p class="copyright text-muted small">
-            {{{i18n 'dapp.app.copyright'}}}
+            Copyright © Sendee Inc. 2016. All Rights Reserved
         </p>
     </footer>
 </template>
