--- a/app/client/templates/components/multiplyContract.html
+++ b/app/client/templates/components/multiplyContract.html
@@ -53,7 +53,7 @@
                             <tr>
                                 <th scope="row">想定元本[円]</th>
                                 <td>
-                                    <input type="text" name="price" placeholder="例：500,000,000" />
+                                    <input type="number" name="price" placeholder="例：500,000,000" />
                                 </td>
                             </tr>
                             <tr>
@@ -75,19 +75,20 @@
                             <tr>
                                 <th scope="row">固定金利[%]</th>
                                 <td>
-                                    <input type="text" name="fixedRate" placeholder="例：1.0" />
+                                    <input type="number" name="fixedRate" placeholder="例：2.0" />
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">変動金利</th>
+                                <th scope="row">変動金利[%]</th>
                                 <td>
-                                    <input type="text" name="floatingRate" placeholder="例：TIBOR" />
+                                    TIBOR +
+                                    <input type="number" name="spread" placeholder="例：1.0" />
                                 </td>
                             </tr>
                             <tr>
                                 <th scope="row">ポジション</th>
                                 <td>
-                                    <input type="text" name="position" id="position" placeholder="例：変動" />
+                                    <input type="text" name="position" id="position" placeholder="例：変動金利" />
                                 </td>
                             </tr>
                         </tbody>
