--- a/app/client/templates/components/index.html
+++ b/app/client/templates/components/index.html
@@ -8,11 +8,13 @@
             <thead>
                 <tr>
                     <th>商品ID</th>
-                    <th>契約名</th>
-                    <th>相手企業名</th>
+                    <th>取引先</th>
+                    <th>想定元本</th>
+                    <th>固定金利</th>
+                    <th>変動金利</th>
                     <th>自社ポジション</th>
                     <th>期日</th>
-                    <th>実行ステータス</th>
+                    <th>ステータス</th>
                     <th>契約詳細</th>
                 </tr>
             </thead>
@@ -29,10 +31,12 @@
     {{#each contracts}}
       <tr>
           <td id="_id">{{_id}}</td>
-          <td id="contract_name">{{contract_name}}</td>
-          <td id="client_name">{{client_name}}</td>
+          <td id="client">{{client}}</td>
+          <td id="price">{{price}}</td>
+          <td id="fixed_rate">{{fixedRate}}</td>
+          <td id="floated_rate">TIBOR + {{spread}}</td>
           <td id="position">{{position}}</td>
-          <td id="exeday">{{exeday}}</td>
+          <td id="expired_date">{{expiredDate}}</td>
       {{#if done}}
           <td><button type="button" class="btn btn-success">実行済</button></td>
       {{else}}
