--- a/app/client/templates/components/multiplyContract.html
+++ b/app/client/templates/components/multiplyContract.html
@@ -88,7 +88,8 @@
                             <tr>
                                 <th scope="row">ポジション</th>
                                 <td>
-                                    <input type="text" name="position" id="position" placeholder="例：変動金利" />
+                                    <label><input type="radio" name="position" value="fixed">固定金利</label>
+                                    <label><input type="radio" name="position" value="floated">変動金利</label>
                                 </td>
                             </tr>
                         </tbody>
