--- a/app/client/templates/layout/_header.html
+++ b/app/client/templates/layout/_header.html
@@ -3,26 +3,26 @@
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="/">
-            Swap Trade
-        </a>
+					Swap Trade
+				</a>
 			</div>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-            <a href="{{ pathFor 'view1' }}">
-                ブロックチェーンステータス
-            </a>
-        </li>
+					<a href="{{ pathFor 'view1' }}">
+						ブロックチェーンステータス
+					</a>
+				</li>
 				<li>
-            <a href="{{ pathFor 'view2' }}">
-                商品一覧
-            </a>
-        </li>
+					<a href="{{ pathFor 'view2' }}">
+						契約作成
+					</a>
+				</li>
 				<li>
-            <a href="{{ pathFor 'view3' }}">
-                契約一覧
-            </a>
-        </li>
-		</ul>
+					<a href="{{ pathFor 'view3' }}">
+						契約一覧
+					</a>
+				</li>
+			</ul>
 		</div>
 	</nav>
 </template>
