--- a/app/client/templates/components/multiplyContract.html
+++ b/app/client/templates/components/multiplyContract.html
@@ -47,7 +47,7 @@
                             <tr>
                                 <th scope="row">想定元本</th>
                                 <td>
-                                    <input type="number" name="price" placeholder="例：500,000,000" />
+                                    <input type="number" name="price" placeholder="例：500,000" />
                                 </td>
                             </tr>
                             <tr>
@@ -89,6 +89,12 @@
                                     <input type="text" name="expiredYear" placeholder="年" />
                                     <input type="text" name="expiredMonth" placeholder="月" />
                                     <input type="text" name="expiredDay" placeholder="日" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">デポジット</th>
+                                <td>
+                                    <input type="number" name="deposit" placeholder="例：10000" />
                                 </td>
                             </tr>
                             <!-- <tr>
