--- a/app/client/templates/views/view1.html
+++ b/app/client/templates/views/view1.html
@@ -2,8 +2,7 @@
     <div class="row-fluid">
         <div class="col-md-6">
             {{> components_balance}}
-
-            {{> components_networkHealth}}
+            <!-- {{> components_networkHealth}} -->
         </div>
         <div class="col-md-6">
             {{> components_accounts}}
