--- a/app/client/templates/components/multiplyContract.html
+++ b/app/client/templates/components/multiplyContract.html
@@ -45,7 +45,7 @@
                     <table class="table main">
                         <tbody>
                             <tr>
-                                <th scope="row">想定元本</th>
+                                <th scope="row">想定元本[ether]</th>
                                 <td>
                                     <input type="number" name="price" placeholder="例：500,000" />
                                 </td>
