--- a/app/client/templates/components/index.html
+++ b/app/client/templates/components/index.html
@@ -8,14 +8,14 @@
             <thead>
                 <tr>
                     <th>想定元本</th>
-                    <th>固定側</th>
-                    <th>変動側</th>
+                    <th>固定サイド</th>
+                    <th>変動サイド</th>
                     <th>固定金利</th>
                     <th>変動金利</th>
                     <th>期日</th>
-                    <th>詳細</th>
+                    <!-- <th>詳細</th> -->
                     <th>相手方</th>
-                    <th>実行</th>
+                    <th>金利支払</th>
                 </tr>
             </thead>
             <tbody>
@@ -31,12 +31,12 @@
     {{#each contracts}}
       <tr>
           <td id="price">{{price}} ether</td>
-          <td id="fixedSide">丸の内銀行</td>
-          <td id="floatedSide">目黒商事</td>
+          <td id="fixedSide">SBI</td>
+          <td id="floatedSide">Sendee</td>
           <td id="fixed_rate">{{fixedRate}}%</td>
           <td id="floated_rate">TIBOR + {{spread}}%</td>
           <td id="expired_date">{{expiredDate.getFullYear}}年{{expiredDate.getMonth}}月{{expiredDate.getDate}}日</td>
-          <td><button type="button" class="btn btn-warning"><a href ="/contract/{{_id}}" style="color:#fff;">詳細</a></button></td>
+          <!-- <td><button type="button" class="btn btn-warning"><a href ="/contract/{{_id}}" style="color:#fff;">詳細</a></button></td> -->
           {{#if done}}
               <td><button type="button" class="btn btn-primary"><a href ="/respond/{{_id}}" style="color:#fff;">入金済</a></button></td>
           {{else}}
