--- a/app/client/templates/layout/_header.html
+++ b/app/client/templates/layout/_header.html
@@ -9,7 +9,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li>
 					<a href="{{ pathFor 'view1' }}">
-						ブロックチェーンステータス
+						アカウント
 					</a>
 				</li>
 				<li>
