--- a/app/client/templates/components/index.html
+++ b/app/client/templates/components/index.html
@@ -8,13 +8,13 @@
             <thead>
                 <tr>
                     <th>想定元本</th>
-                    <th>固定サイド</th>
-                    <th>変動サイド</th>
+                    <th>固定受取</th>
+                    <th>変動受取</th>
                     <th>固定金利</th>
                     <th>変動金利</th>
                     <th>期日</th>
                     <!-- <th>詳細</th> -->
-                    <th>相手方</th>
+                    <th>相手方デポジット</th>
                     <th>金利支払</th>
                 </tr>
             </thead>
@@ -31,17 +31,17 @@
     {{#each contracts}}
       <tr>
           <td id="price">{{price}} ether</td>
-          <td id="fixedSide">SBI</td>
-          <td id="floatedSide">Sendee</td>
+          <td id="fixedSide">A銀行</td>
+          <td id="floatedSide">B商事</td>
           <td id="fixed_rate">{{fixedRate}}%</td>
           <td id="floated_rate">TIBOR + {{spread}}%</td>
           <td id="expired_date">{{expiredDate.getFullYear}}年{{expiredDate.getMonth}}月{{expiredDate.getDate}}日</td>
           <!-- <td><button type="button" class="btn btn-warning"><a href ="/contract/{{_id}}" style="color:#fff;">詳細</a></button></td> -->
-          {{#if done}}
+          <!-- {{#if done}} -->
               <td><button type="button" class="btn btn-primary"><a href ="/respond/{{_id}}" style="color:#fff;">入金済</a></button></td>
-          {{else}}
-              <td><button type="button" class="btn btn-primary"><a href ="/respond/{{_id}}" style="color:#fff;">未入金</a></button></td>
-          {{/if}}
+          <!-- {{else}} -->
+              <!-- <td><button type="button" class="btn btn-primary"><a href ="/respond/{{_id}}" style="color:#fff;">未入金</a></button></td> -->
+          <!-- {{/if}} -->
           <td><button type="button" class="btn btn-success" id="{{contract_address}}">実行</button></td>
       </tr>
     {{/each}}
